--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Little Tools </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<base href="/">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles/app.css">
@@ -21,5 +22,7 @@
 	<script type="text/javascript" src="scripts/app.js"></script>
 	<script type="text/javascript" src="scripts/controllers/primeNumberController.js"></script>
 	<script type="text/javascript" src="scripts/controllers/fibonacciController.js"></script>
+	<script type="text/javascript" src="scripts/controllers/palindromeController.js"></script>
+	<script type="text/javascript" src="scripts/services/palindromeFactory.js"></script>
 </body>
 </html>
