--- a/pages/home.html
+++ b/pages/home.html
@@ -1,21 +1,28 @@
 <div class="homepage">
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
-		<div class="home-content">
-			<h1 class="text-center">Little Tools</h1>
-			<a class="btn btn-warning form-control" ng-href="/prime">Find Prime</a>
-			<a class="btn btn-info form-control" ng-href="/palindrome">Is it Palindrome ?</a>
-			<a class="btn btn-info form-control" ng-href="/fibonacci">Get me Fibnocci</a>
-			<a ui-sref="AdminLogin" ui-sref-active="active"></a>
-		</div>
+		<div class="col-md-8 col-md-offset-2">
+			<div class="page-header">
+				<h1 class="text-center">Little Tools</h1>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<a class="btn btn-warning form-control" ng-href="/prime">Find Prime</a>
+				</div>
+				<div class="col-md-4">
+					<a class="btn btn-info form-control" ng-href="/palindrome">Is it Palindrome ?</a>
+				</div>
+				<div class="col-md-4">
+					<a class="btn btn-info form-control" ng-href="/fibonacci">Get me Fibnocci</a>
+				</div>						
+			</div>
 		</div>	
 		
 	</div>
-
+	<br>
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
+		<div class="col-md-8 col-md-offset-2">
 			<div class="text-center">
-				<span class="text-muted ">By Mahesh Patel</span>
+				<span class="text-muted "><a href="https://twitter.com/mahesh_patel_">Mahesh Patel</a> </span>
 			</div>
 			
 		</div>
