--- a/pages/prime.html
+++ b/pages/prime.html
@@ -1,5 +1,27 @@
-<div ng-controller="primeNumberController">
-	<input type="text" ng-model="primeNumber" />
-	<span ng-model="message">{{message}}</span>
-	<button type="button" class="btn btn-success" ng-click="check()">Check</button>
+<div class="homepage" ng-controller="primeNumberController">
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2">
+			<div class="page-header">
+				<h1 class="text-center">Check for Prime Number</h1>
+			</div>
+			<div class="col-md-6 col-md-offset-3">
+				<div class="form-group" ng-class="{'has-error' : message}">
+					<input type="text" ng-model="primeNumber" class="form-control"/>
+					<span ng-model="message" ng-show="message" class="help-block text-center">{{message}}</span>
+				</div>
+				<div class="form-group">
+					<div class="output-span text-center" ng-model="messageSuccess" ng-show="messageSuccess">{{messageSuccess}}</div>
+				</div>				
+				<div class="form-group col-md-6 col-md-offset-3">
+					<button type="button" class="btn btn-success form-control" ng-click="check()">Check</button>
+				</div>
+			</div>
+			
+		</div>
+	</div>
+	<div class="row">
+		<div class="text-center">
+			<a class="" ng-href="/">Go Home</a>
+		</div>
+	</div>
 </div>
