complete with componenet

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
 	
 	<script type="text/javascript" src="scripts/app.js"></script>
-	<script type="text/javascript" src="scripts/controllers/primeNumberController.js"></script>
-	<script type="text/javascript" src="scripts/controllers/fibonacciController.js"></script>
-	<script type="text/javascript" src="scripts/controllers/palindromeController.js"></script>
 	<script type="text/javascript" src="scripts/services/palindromeFactory.js"></script>
+	<script type="text/javascript" src="scripts/components/prime-number.component.js"></script>
+	<script type="text/javascript" src="scripts/components/palindrome.component.js"></script>
+	<script type="text/javascript" src="scripts/components/fibonacci.component.js"></script>
 </body>
 </html>
