--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<div class="homepage">
+<div class="">
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<div class="page-header">
@@ -9,7 +9,7 @@
 					<a class="btn btn-warning form-control" ng-href="/prime">Find Prime</a>
 				</div>
 				<div class="col-md-4">
-					<a class="btn btn-info form-control" ng-href="/palindrome">Is it Palindrome ?</a>
+					<a class="btn btn-primary form-control" ng-href="/palindrome">Is it Palindrome ?</a>
 				</div>
 				<div class="col-md-4">
 					<a class="btn btn-info form-control" ng-href="/fibonacci">Get me Fibnocci</a>
