--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<base href="/">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="styles/app.css">
+	<link rel="stylesheet" type="text/css" href="public/css/vendor.min.css">
+    <link rel="stylesheet" type="text/css" href="public/css/app.min.css">
 </head>
 <body class="container" ng-app="myApp">
 
     <div class="container-fluid"> 
       <div ng-view></div>
     </div>	
-	<!-- scripts -->
+	<!-- 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.5/angular-resource.min.js"></script>	
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
-	
-	<script type="text/javascript" src="scripts/app.js"></script>
-	<script type="text/javascript" src="scripts/services/palindromeFactory.js"></script>
-	<script type="text/javascript" src="scripts/components/prime-number.component.js"></script>
-	<script type="text/javascript" src="scripts/components/palindrome.component.js"></script>
-	<script type="text/javascript" src="scripts/components/fibonacci.component.js"></script>
+	-->
+	<script type="text/javascript" src="public/js/vendor.min.js"></script>
+	<script type="text/javascript" src="public/js/app.min.js"></script>
+
 </body>
 </html>
