commit for github pages

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
 	-->
-	<script type="text/javascript" src="public/js/vendor.min.js"></script>
-	<script type="text/javascript" src="public/js/app.min.js"></script>
+	<script type="text/javascript" src="math-utility-angularjs/public/js/vendor.min.js"></script>
+	<script type="text/javascript" src="math-utility-angularjs/public/js/app.min.js"></script>
 
 </body>
 </html>
