--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<base href="/">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="public/css/vendor.min.css">
-    <link rel="stylesheet" type="text/css" href="public/css/app.min.css">
+	<link rel="stylesheet" type="text/css" href="math-utility-angularjs/public/css/vendor.min.css">
+    <link rel="stylesheet" type="text/css" href="math-utility-angularjs/public/css/app.min.css">
 </head>
 <body class="container" ng-app="myApp">
 
