--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<title>Little Tools </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<base href="/">
+	<base href="/math-utility-angularjs">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="math-utility-angularjs/public/css/vendor.min.css">
-    <link rel="stylesheet" type="text/css" href="math-utility-angularjs/public/css/app.min.css">
+	<link rel="stylesheet" type="text/css" href="public/css/vendor.min.css">
+    <link rel="stylesheet" type="text/css" href="public/css/app.min.css">
 </head>
 <body class="container" ng-app="myApp">
 
@@ -20,8 +20,8 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
 	-->
-	<script type="text/javascript" src="math-utility-angularjs/public/js/vendor.min.js"></script>
-	<script type="text/javascript" src="math-utility-angularjs/public/js/app.min.js"></script>
+	<script type="text/javascript" src="public/js/vendor.min.js"></script>
+	<script type="text/javascript" src="public/js/app.min.js"></script>
 
 </body>
 </html>
