--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Little Tools </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<base href="/math-utility-angularjs">
+	<base href="/">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="public/css/vendor.min.css">
     <link rel="stylesheet" type="text/css" href="public/css/app.min.css">
